Adding ToDo about fixing sql formatting.

--- a/SQL/Jupyter SQL Basics.ipynb
+++ b/SQL/Jupyter SQL Basics.ipynb
@@ -1047,7 +1047,8 @@
     "1. select/case/when\n",
     "1. if/else/endif\n",
     "1. DROP ... IF EXSISTS\n",
-    "1. Remove all extra \"explanation:\" from markdown cells"
+    "1. Remove all extra \"explanation:\" from markdown cells\n",
+    "1. Check GitHub view and improve formatting of queries as needed."
    ]
   },
   {
