Adding new topics to SQL notebooks.

--- a/SQL/Extensions and Variations of SQL.ipynb
+++ b/SQL/Extensions and Variations of SQL.ipynb
@@ -107,6 +107,75 @@
     "-- Example 4: Executing a stored procedure\n",
     "EXEC GetEmployeeCount; -- Expected output: EmployeeCount"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffcf9373",
+   "metadata": {},
+   "source": [
+    "# NoSQL (eg. MongoDB)\n",
+    "MongoDB is a popular NoSQL database that provides a flexible and scalable approach to storing and retrieving data. In this code snippet, we demonstrate various operations using MongoDB's syntax.\n",
+    "\n",
+    "- We start by creating a collection named \"users\" using the `createCollection` method.\n",
+    "- Next, we insert a document into the \"users\" collection using the `insertOne` method.\n",
+    "- To retrieve all documents in the collection, we use the `find` method without any parameters.\n",
+    "- We can also find documents that match a specific condition by passing a query object to the `find` method. In this example, we search for documents where the \"age\" field is greater than 25.\n",
+    "- Updating a document is done using the `updateOne` method. We specify the filter to identify the document to update and the update operation using the `$set` operator.\n",
+    "- Deleting a document is achieved using the `deleteOne` method. We provide a filter to identify the document to delete.\n",
+    "- Indexes can be created on fields to improve query performance. Here, we create an index on the \"name\" field using the `createIndex` method.\n",
+    "- Finally, we drop the \"users\" collection using the `drop` method.\n",
+    "\n",
+    "When running this code, you should see the output of the various operations, such as the inserted document, the found documents, and the result of update and delete operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f113a0c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2377635783.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    -- Create a collection in MongoDB\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "-- Create a collection in MongoDB\n",
+    "db.createCollection(\"users\")\n",
+    "\n",
+    "-- Insert a document into the collection\n",
+    "db.users.insertOne({name: \"John\", age: 30})\n",
+    "\n",
+    "-- Find all documents in the collection\n",
+    "db.users.find()\n",
+    "\n",
+    "-- Find documents matching a specific condition\n",
+    "db.users.find({age: {$gt: 25}})\n",
+    "\n",
+    "-- Update a document in the collection\n",
+    "db.users.updateOne({name: \"John\"}, {$set: {age: 35}})\n",
+    "\n",
+    "-- Delete a document from the collection\n",
+    "db.users.deleteOne({name: \"John\"})\n",
+    "\n",
+    "-- Create an index on a field\n",
+    "db.users.createIndex({name: 1})\n",
+    "\n",
+    "-- Drop the collection\n",
+    "db.users.drop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9abbe36d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
