--- a/SQL/Jupyter SQL Basics.ipynb
+++ b/SQL/Jupyter SQL Basics.ipynb
@@ -1037,17 +1037,7 @@
    "source": [
     "# ToDo (and consider adding to Outline Template)\n",
     "\n",
-    "1. NULL and nullability checks\n",
-    "1. case sensitivity of table names, functions, etc.\n",
-    "1. order by with primary and secondary order?\n",
-    "1. group by with primary and secondary grouping?\n",
-    "1. exact syntax and statement structure and order of operations\n",
-    "1. NoSQL\n",
-    "1. casting (eg. string to date)\n",
-    "1. select/case/when\n",
-    "1. if/else/endif\n",
-    "1. DROP ... IF EXSISTS\n",
-    "1. Remove all extra \"explanation:\" from markdown cells\n",
+    "1. Remove all extra \"explanation:\" and \"snippet above\" from markdown cells\n",
     "1. Check GitHub view and improve formatting of queries as needed."
    ]
   },
