--- a/SQL/Recent Versions.ipynb
+++ b/SQL/Recent Versions.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "# SQL-92 (1992)\n",
-    "Explanation:\n",
+    "\n",
     "This code snippet demonstrates various features of SQL-92 (1992) version.\n",
     "\n",
     "1. The code starts by creating a table called \"employees\" with columns for id, name, age, and salary.\n",
@@ -98,7 +98,7 @@
    "metadata": {},
    "source": [
     "# SQL:1999 (1999)\n",
-    "Explanation:\n",
+    "\n",
     "This code snippet demonstrates various features of SQL:1999 (1999) version.\n",
     "\n",
     "1. Creating a table: The `CREATE TABLE` statement is used to create a table named \"employees\" with columns for id, name, age, and salary.\n",
@@ -226,7 +226,7 @@
    "metadata": {},
    "source": [
     "# SQL:2003 (2003)\n",
-    "Explanation:\n",
+    "\n",
     "This code snippet demonstrates various SQL statements and features related to the SQL:2003 standard.\n",
     "\n",
     "1. The code starts by creating a table called \"employees\" with columns for id, name, age, and salary.\n",
@@ -320,7 +320,7 @@
    "metadata": {},
    "source": [
     "# SQL:2006 (2006)\n",
-    "Explanation:\n",
+    "\n",
     "\n",
     "This code snippet demonstrates various features of SQL:2006 (2006) related to table creation, data manipulation, and querying.\n",
     "\n",
@@ -408,7 +408,7 @@
    "metadata": {},
    "source": [
     "# SQL:2008 (2008)\n",
-    "Code Explanation:\n",
+    "Code \n",
     "This code snippet demonstrates various SQL operations using the SQL:2008 syntax.\n",
     "\n",
     "1. The code creates a table called \"employees\" with columns for id, name, age, and salary.\n",
@@ -499,7 +499,7 @@
    "metadata": {},
    "source": [
     "# SQL:2011 (2011)\n",
-    "Explanation:\n",
+    "\n",
     "This code snippet demonstrates various features of SQL:2011 (2011) related to table creation, data manipulation, querying, and joining. Here's a breakdown of what the code does:\n",
     "\n",
     "1. Creates a table named \"employees\" with columns for id, name, age, and salary.\n",
@@ -581,7 +581,7 @@
    "metadata": {},
    "source": [
     "# SQL:2016 (2016)\n",
-    "Code Explanation:\n",
+    "Code \n",
     "This code snippet demonstrates various features of SQL:2016.\n",
     "\n",
     "1. Creating a table: The `CREATE TABLE` statement is used to create a table named \"employees\" with columns for id, name, age, and salary.\n",
@@ -664,7 +664,7 @@
    "metadata": {},
    "source": [
     "# SQL:2019 (2019)\n",
-    "Summary:\n",
+    "\n",
     "The code snippet demonstrates various features introduced in the SQL:2019 standard. It covers creating a table, inserting, updating, and deleting data, as well as selecting data with filtering, ordering, aggregation, joins, subqueries, window functions, and common table expressions (CTEs). These features provide powerful capabilities for working with relational databases and analyzing data."
    ]
   },
