Some updates from studying.

--- a/SQL/Basic Statements.ipynb
+++ b/SQL/Basic Statements.ipynb
@@ -2845,9 +2845,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "918c776b",
+   "metadata": {},
+   "source": [
+    "# COUNT()\n",
+    "\n",
+    "Although `COUNT(*)` as the one shown the most in these snippets, COUNT() can also take other args such as a column name to get # of non-null values of that column (and other variants like using DISTINCT)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca60ef8d",
+   "id": "13a3f85a",
    "metadata": {},
    "outputs": [],
    "source": []
