--- a/SQL/Columns and Data Transformation in Queries.ipynb
+++ b/SQL/Columns and Data Transformation in Queries.ipynb
@@ -61,7 +61,11 @@
     "John       | Doe       | JOHN\n",
     "Jane       | Smith     | JANE\n",
     "Mike       | Johnson   | MIKE\n",
-    "```"
+    "```\n",
+    "\n",
+    "NOTE: Column aliases __cannot be applied in WHERE__ but __can be applied in GROUP BY and ORDER BY__.\n",
+    "\n",
+    "NOTE: Table aliases, on the other hand, __apply everywhere__."
    ]
   },
   {
