Adding some clarification and additional info.

--- a/SQL/Advanced Queries.ipynb
+++ b/SQL/Advanced Queries.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "15e15f07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n",
-      "\u001b[33mThere's a new jupysql version available (0.10.1), you're running 0.10.0. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "%sql duckdb://"
@@ -2017,6 +2007,316 @@
     "\n",
     "DROP TABLE IF EXISTS employees;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdcbeb1b",
+   "metadata": {},
+   "source": [
+    "# Clause Order of SELECT statement\n",
+    "\n",
+    "[SELECT [DISTINCT]] [FROM] [JOIN] [WHERE] [ORDER BY] [LIMIT] [JOIN] [GROUP BY] [HAVING]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4992e82",
+   "metadata": {},
+   "source": [
+    "# Execution Order of SELECT statement\n",
+    "\n",
+    "[FROM] [WHERE] [GROUP BY] [HAVING] [SELECT] [DISTINCT] [ORDER BY] [LIMIT/OFFSET]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb31b257",
+   "metadata": {},
+   "source": [
+    "# Distinct\n",
+    "\n",
+    "`DISTINCT` deduplicates result rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bb7e4c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE employees (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(50),\n",
+    "    age INT,\n",
+    "    salary DECIMAL(10, 2)\n",
+    ");\n",
+    "\n",
+    "INSERT INTO employees (id, name, age, salary)\n",
+    "VALUES (1, 'John Doe', 30, 5000),\n",
+    "       (2, 'Jane Smith', 25, 6000),\n",
+    "       (3, 'Mike Johnson', 35, 4500),\n",
+    "       (4, 'Emily Davis', 28, 5500),\n",
+    "       (5, 'David Brown', 32, 5200),\n",
+    "       (6, 'John Doe', 30, 5500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "17dc923b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "            <th>age</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>John Doe</td>\n",
+       "            <td>30</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Jane Smith</td>\n",
+       "            <td>25</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Mike Johnson</td>\n",
+       "            <td>35</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Emily Davis</td>\n",
+       "            <td>28</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>David Brown</td>\n",
+       "            <td>32</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+--------------+-----+\n",
+       "|     name     | age |\n",
+       "+--------------+-----+\n",
+       "|   John Doe   |  30 |\n",
+       "|  Jane Smith  |  25 |\n",
+       "| Mike Johnson |  35 |\n",
+       "| Emily Davis  |  28 |\n",
+       "| David Brown  |  32 |\n",
+       "+--------------+-----+"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT DISTINCT name, age FROM employees;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a41998",
+   "metadata": {},
+   "source": [
+    "# Limit/Offset\n",
+    "\n",
+    "Both take a numeric parameter.\n",
+    "`LIMIT` limits the number of rows returned while `OFFSET` skips the first few rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0a36e158",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE employees (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(50),\n",
+    "    age INT,\n",
+    "    salary DECIMAL(10, 2)\n",
+    ");\n",
+    "\n",
+    "INSERT INTO employees (id, name, age, salary)\n",
+    "VALUES (1, 'John Doe', 30, 5000),\n",
+    "       (2, 'Jane Smith', 25, 6000),\n",
+    "       (3, 'Mike Johnson', 35, 4500),\n",
+    "       (4, 'Emily Davis', 28, 5500),\n",
+    "       (5, 'David Brown', 32, 5200),\n",
+    "       (6, 'John Doe', 30, 5500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a36c3970",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>age</th>\n",
+       "            <th>salary</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>Jane Smith</td>\n",
+       "            <td>25</td>\n",
+       "            <td>6000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>Mike Johnson</td>\n",
+       "            <td>35</td>\n",
+       "            <td>4500.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+----+--------------+-----+---------+\n",
+       "| id |     name     | age |  salary |\n",
+       "+----+--------------+-----+---------+\n",
+       "| 2  |  Jane Smith  |  25 | 6000.00 |\n",
+       "| 3  | Mike Johnson |  35 | 4500.00 |\n",
+       "+----+--------------+-----+---------+"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM employees LIMIT 2 OFFSET 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6924af06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
