--- a/SQL/Advanced Queries.ipynb
+++ b/SQL/Advanced Queries.ipynb
@@ -2015,7 +2015,7 @@
    "source": [
     "# Clause Order of SELECT statement\n",
     "\n",
-    "[SELECT [DISTINCT]] [FROM] [JOIN] [WHERE] [ORDER BY] [LIMIT] [JOIN] [GROUP BY] [HAVING]"
+    "[SELECT [DISTINCT]] [FROM] [JOIN] [WHERE] [ORDER BY] [LIMIT] [GROUP BY] [HAVING]"
    ]
   },
   {
@@ -2025,7 +2025,7 @@
    "source": [
     "# Execution Order of SELECT statement\n",
     "\n",
-    "[FROM] [WHERE] [GROUP BY] [HAVING] [SELECT] [DISTINCT] [ORDER BY] [LIMIT/OFFSET]"
+    "[FROM] [JOIN] [WHERE] [GROUP BY] [HAVING] [SELECT] [DISTINCT] [ORDER BY] [LIMIT/OFFSET]"
    ]
   },
   {
