--- a/SQL/Advanced Queries.ipynb
+++ b/SQL/Advanced Queries.ipynb
@@ -919,6 +919,8 @@
     "- The `EXCEPT` operator returns only the rows that appear in the first table but not in the second table. It returns a set of rows that are unique to the first table.\n",
     "- Each query is executed and the results are printed to demonstrate the behavior of each operator.\n",
     "\n",
+    "NOTE: these operators combine __whole queries__ (not just the SELECT parts).\n",
+    "\n",
     "Expected Output:\n",
     "- UNION:\n",
     "```\n",
