Adding some Java clarifications.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -2041,6 +2041,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c308c09f",
+   "metadata": {},
+   "source": [
+    "# Comparator\\<T>\n",
+    "\n",
+    "- this is a __functional interface__ in `java.util` that can override or extend behavior from the natural order provided in the `Comparaible<T>` interface.\n",
+    "- the public abstract member is `compare(T o1, T o2)`\n",
+    "- there are many __static__ members like `naturalOrder()` and `reverseOrder()`\n",
+    "- also many __default__ members like `thenComparing()` variants for chaining\n",
+    "\n",
+    "```\n",
+    "Collections.sort(people, Comparator.comparing(Person::getLastName)\n",
+    "            .thenComparing(Person::getFirstName));```j"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3247084d",
    "metadata": {},
    "source": [
