--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -61,7 +61,7 @@
     "    \n",
     "    public static void main(String[] args) {\n",
     "        // Example 1: Lambda expression as an anonymous function\n",
-    "        // NOTE: if you use a generic functional interface, youl'll\n",
+    "        // NOTE: if you use a generic functional interface, you'll\n",
     "        //       be limited to BOXED TYPES\n",
     "        Function<Integer, Integer> square = (Integer x) -> x * x;\n",
     "        square = x -> x * x; // equivalent [left out the ()]\n",
@@ -96,6 +96,16 @@
     "}\n",
     "\n",
     "LambdasDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ad6dc4",
+   "metadata": {},
+   "source": [
+    "# Functional Interface Members\n",
+    "\n",
+    "It is worth noting that a functional interface can have __static__ members that can be called on the interface and do not interfer with the fact that the one public abstract method is the one used for calling functions."
    ]
   },
   {
