--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -1647,7 +1647,9 @@
     "- interface methods can be `private` and have implementation\n",
     "    - this is only to be called by `static` or `default` methods\n",
     "    \n",
-    "Do default methods make an interface into an ABC (abstract base class)?  Not quite!  Because an interface has __no variables__. However, it can be a way to get around the multiple inheritance limitation."
+    "Do default methods make an interface into an ABC (abstract base class)?  Not quite!  Because an interface has __no variables__. However, it can be a way to get around the multiple inheritance limitation.\n",
+    "\n",
+    "NOTE: default methods are effectively new public abstract methods that happen to have default implementations.  They do not have the same name as any other method of the interface and are part of the interface, though a subclass is free to not provide it and let the default happen."
    ]
   },
   {
