Adding some detail about type constraints.
Learned/research while looking at standard library method documentation.

--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -412,6 +412,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8f58d26",
+   "metadata": {},
+   "source": [
+    "# Extending/Implementing Multiple Interfaces/Classes\n",
+    "\n",
+    "`<T extends Object & Comparable<T>` is a way to specify multiple interfaces.  There are no |, !, etc...just &."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9c936080",
    "metadata": {},
    "source": [
@@ -431,12 +441,14 @@
     "\n",
     "Next, we call the `addElements` method with `integerList` and `numberList` to add elements to the lists. Finally, we print the modified lists using the `printList` method.\n",
     "\n",
-    "The output of the code snippet demonstrates the expected behavior of the wildcard usage, printing the elements and numbers accordingly."
+    "The output of the code snippet demonstrates the expected behavior of the wildcard usage, printing the elements and numbers accordingly.\n",
+    "\n",
+    "The snippet also demonstrates that it is possible to return a wildcard from a method although usually not in your best interest to do so.  There may be scenarios where it makes sense."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "f1cb8053",
    "metadata": {},
    "outputs": [
@@ -508,6 +520,17 @@
     "        list.add(10);\n",
     "        list.add(20);\n",
     "        list.add(30);\n",
+    "    }\n",
+    "    \n",
+    "    // This is allowed but not very useful.\n",
+    "    // The caller has to treat it as Object.\n",
+    "    public static List<?> wildReturn() {\n",
+    "        return null;\n",
+    "    }\n",
+    "    \n",
+    "    // This is more useful because the caller can specify the type.\n",
+    "    public static <T> List<T> genericReturn() {\n",
+    "        return null;\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
@@ -592,6 +615,32 @@
     "}\n",
     "\n",
     "TypeWildcardsDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd74f806",
+   "metadata": {},
+   "source": [
+    "# When To Use \\<T> instead of ?\n",
+    "\n",
+    "A lot of methods in the standard library that look like they could take a ? use a type param instead.  Here are some of the reasons you may want to do so:\n",
+    "\n",
+    "- if you need to specify that a type extends another type, that is awkward with wildcards.  For instance: `<T extends Comparable<? super T>`\n",
+    "- if you want the user to be able to specify the type\n",
+    "- in general, return values tend to be <T> while params may tend toward <?> if no <T> is provided\n",
+    "\n",
+    "A concrete example is `Collections`, which has `swap()` that takes `List<?>` because it just treats elements as objects, and then `sort()` that takes `<T extends Comparaible<? super T>>` because it needs to specify that base."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59cc2c1f",
+   "metadata": {},
+   "source": [
+    "# \\<T extends Comparable<\\? super T>>\n",
+    "\n",
+    "This is an idiom you see a lot in collections static methods in the standard library.  It means that we'll take classes that implement Comparable on lower level interfaces than the class itself.  For instance, if you had an Animal class that was comparable, and then a Dog sublcass that did not need to reimplement that interface."
    ]
   },
   {
