Deep dive into java.util.concurrent.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -1124,6 +1124,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b0519d8",
+   "metadata": {},
+   "source": [
+    "# Instantiating Object\n",
+    "\n",
+    "`Object` is not abstract.  You can instantiate it.\n",
+    "\n",
+    "An example of when this is useful is when you need an opaque object reference to use for something like a synchronization lock."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "953ff612",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InstantiateObjectDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Object o = new Object();\n",
+    "        \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "InstantiateObjectDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76572b9b",
    "metadata": {},
    "source": [
