--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -293,7 +293,9 @@
    "source": [
     "# Void as T argument\n",
     "\n",
-    "This feature (from TypeScript) is __not supported__ in Java."
+    "This feature (from TypeScript) is __not supported directly__ in Java.\n",
+    "\n",
+    "But the workaround is a type `Void` (capitalized) in `java.lang`.  It is essentially a subclass of `Object` with no members (and thus can be returned but provide no useful information to a caller)."
    ]
   },
   {
