Adding info about extensible enums.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -2493,6 +2493,173 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7021d5a3",
+   "metadata": {},
+   "source": [
+    "## Constant-Specific Class Body\n",
+    "\n",
+    "This is a special feature of enums that lets you provide method implementations of abstract methods in enum constants.\n",
+    "\n",
+    "It is a way to have an enum that has multiple implementations of the same interface via the enum constants, rather than having to do a class hierarchy and create objects for very simple things.\n",
+    "\n",
+    "An enum is allowed to __inherit an interface__ for this purpose as shown in the 2nd example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "82e554ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OP1.f\n"
+     ]
+    }
+   ],
+   "source": [
+    "enum MyEnum {\n",
+    "    // Each constant is anonymous class rather than constructor call.\n",
+    "    OP1 {\n",
+    "        void f() {System.out.println(\"OP1.f\");}\n",
+    "        void g() {System.out.println(\"OP1.g\");}\n",
+    "        \n",
+    "        // While this is allowed, it will not be visible from the\n",
+    "        // enum constants.\n",
+    "        void h() {}\n",
+    "    },\n",
+    "    OP2 {\n",
+    "        void f() {System.out.println(\"OP2.f\");}\n",
+    "        void g() {System.out.println(\"OP2.g\");}\n",
+    "    };\n",
+    "    \n",
+    "    // Specify which methods to make visible.\n",
+    "    abstract void f();\n",
+    "    abstract void g();\n",
+    "}\n",
+    "\n",
+    "class ConstantSpecificDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyEnum.OP1.f();\n",
+    "        \n",
+    "        //MyEnum.OP1.h(); // ILLEGAL\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ConstantSpecificDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8636c83f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface Operation {\n",
+    "    double apply(double x, double y);\n",
+    "}\n",
+    "\n",
+    "enum MyOperation implements Operation {\n",
+    "    ADD {\n",
+    "        public double apply(double x, double y) { return x + y; }\n",
+    "    },\n",
+    "    SUBTRACT {\n",
+    "        public double apply(double x, double y) { return x - y; }\n",
+    "    }\n",
+    "    \n",
+    "    // Inheriting the interface replaces having to declare abstract method\n",
+    "}\n",
+    "\n",
+    "class InterfaceDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        System.out.println(MyOperation.ADD.apply(10, 20));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "InterfaceDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0033760",
+   "metadata": {},
+   "source": [
+    "# Extensible Enums\n",
+    "\n",
+    "This is an idiom in Java that makes use of the constant-specific class body behavior.\n",
+    "\n",
+    "You can code to an interface and implement that interface in enum constants across multiple enums.  Then only the interface matters and not which specific enum constant is passed in.\n",
+    "\n",
+    "The name is meant to convey that you can add more in the future without changing existing code.  It is a __design pattern__ rather than a language feature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "271a36bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.0\n",
+      "200.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface Operation {\n",
+    "    double apply(double x, double y);\n",
+    "}\n",
+    "\n",
+    "enum BasicOperation implements Operation {\n",
+    "    ADD {\n",
+    "        public double apply(double x, double y) { return x + y; }\n",
+    "    },\n",
+    "    SUBTRACT {\n",
+    "        public double apply(double x, double y) { return x - y; }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "enum AdvancedOperation implements Operation {\n",
+    "    MULTIPLY {\n",
+    "        public double apply(double x, double y) { return x * y; }\n",
+    "    },\n",
+    "    DIVIDE {\n",
+    "        public double apply(double x, double y) { return x / y; }\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "class ExtensibleDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        System.out.println(BasicOperation.ADD.apply(10, 20));\n",
+    "        System.out.println(AdvancedOperation.MULTIPLY.apply(10, 20));\n",
+    "        \n",
+    "        Operation operation = AdvancedOperation.DIVIDE;\n",
+    "        \n",
+    "        // Can use the interface instead of an enum constant.\n",
+    "        System.out.println(operation.apply(50, 10));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ExtensibleDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac2f469a",
    "metadata": {},
    "source": [
