--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -92,7 +92,9 @@
     "\n",
     "The above way with `System.console()` doesn't work in either jupyter or in environments like HackerRank.\n",
     "\n",
-    "This is the __more idiomiatic__ and resilient way to do it."
+    "This is the __more idiomiatic__ and resilient way to do it.\n",
+    "\n",
+    "Notice that there's nothing wrong with printing between calls to `readLine()` - it will not get sucked back in."
    ]
   },
   {
