Adding clarification about binding statics.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -289,6 +289,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "561adca5",
+   "metadata": {},
+   "source": [
+    "# Binding First Arg of Static\n",
+    "\n",
+    "This is something you might try to do which is __not allowed__.\n",
+    "\n",
+    "You cannot use any arbitrary static method with binding to turn the first param into `this`.  That only works for a true instance method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b00dae8c",
    "metadata": {},
    "source": [
