Adding design patterns.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -774,9 +774,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c915e2c6",
+   "metadata": {},
+   "source": [
+    "# Lazy List\n",
+    "\n",
+    "Streams (eg. `Stream.of()`) are evaluated lazily."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a06c96b4",
+   "id": "5613b2ab",
    "metadata": {},
    "outputs": [],
    "source": []
